# lib-inter-process-courier

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  apply_format.sh  conanfile.py  create_zip_package.sh  requirements.txt
conan/profiles/: system_gcc14.2
docs/html/: InterProcessCourier_8hpp.html  InterProcessCourier_8hpp_source.html  Version_8hpp.html  Version_8hpp.js  Version_8hpp_source.html  _inter_process_courier_8hpp.html  _inter_process_courier_8hpp__incl.dot  _inter_process_courier_8hpp_source.html  _r_e_a_d_m_e_8md.html  _version_8hpp.html  _version_8hpp.js  _version_8hpp__dep__incl.dot  _version_8hpp__incl.dot  _version_8hpp_source.html  dir_74a59efd182c6cf7bff0e68d7616a92b.html  dir_74a59efd182c6cf7bff0e68d7616a92b.js  dir_74a59efd182c6cf7bff0e68d7616a92b_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  graph_legend.html  index.html  menudata.js  modern-doxygen.css  namespaceipcourier.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  files_0.js  files_2.js  functions_0.js  namespaces_0.js  pages_0.js  searchdata.js
examples/basic/: .gitignore  CMakeLists.txt  conanfile.py
examples/basic/src/: main.cpp
include/: InterProcessCourier.hpp
include/InterProcessCourier/: Error.hpp  InterProcessCourier.hpp  Metadata.hpp  ProtobufInterface.hpp  ProtobufTools.hpp  SyncClient.hpp  SyncCommons.hpp  SyncServer.hpp  ThirdPartyFwd.hpp  Version.hpp
include/InterProcessCourier/detail/: DetailFwd.hpp  DuplicateRegistrationHandler.hpp  ProtobufTools.hpp  ThirdPartyFwd.hpp
jenkins/: Dockerfile  Jenkinsfile
proto/: InternalRequests.proto
src/: DuplicateRegistrationHandler.cpp  Metadata.cpp  ProtobufTools.cpp  SyncClient.cpp  SyncServer.cpp  SyncUnixDomainClient.cpp  SyncUnixDomainClient.hpp  SyncUnixDomainServer.cpp  SyncUnixDomainServer.hpp  UnixDomainProtocol.hpp  Version.cpp
test/: Error.Tests.cpp  MainHeader.Tests.cpp  Metadata.Tests.cpp  ProtobufTools.Tests.cpp  Version.Tests.cpp  main.cpp
test/proto/: ProtoForTests.proto
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
